# P4_project

./: .gitignore  CMakeLists.txt  P4_project.cpp  P4_project.h  README.md  ReadfromPython.txt  hello.xml  mainwindow.cpp  mainwindow.h  mainwindow.ui  testOnlyLabels.py  with_objects.xml
MujocoProgram/: CMakeLists.txt  ReadfromPCL.txt  main.cpp  mainwindow.cpp  mainwindow.h
MujocoProgram/mesh/: cupnoshank.stl  shanktop1.stl
MujocoProgram/mujoco/: objects.xml
MujocoProgram/mujoco/mesh/: shankbottom1.stl  shankbottom2.stl  shanktop2.stl
mesh/: shank.stl  wineglassfoot.STL  wineglasstop.STL
mujoco/: CMakeLists.txt  mujoco.cpp
mujoco/mesh/: wineglassbottom.STL
